--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+.env
 ###> symfony/framework-bundle ###
 /.env.local
 /.env.local.php
@@ -7,5 +7,4 @@
 /public/bundles/
 /var/
 /vendor/
-/.env
 ###< symfony/framework-bundle ###
